<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="smarthouse.smartronic.Rooms">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/rooms"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:onClick="goRooms"
            android:radius="10dp"
            android:text="@string/rooms"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/security"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:background="@drawable/circle"
            android:layout_gravity="center"
            android:onClick="goSecurity"
            android:radius="10dp"
            android:text="@string/security"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>


    <View
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button"
        android:background="@android:color/white" />

    <View
        android:id="@+id/textView"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white" />

    <View
        android:id="@+id/textView4"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:background="@android:color/white" />


    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:background="@android:color/transparent"
        android:text="@string/overview"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:text="@string/quick_menu"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:text="@string/missions"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:text="@string/settings"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/settings"
        style="@style/settings_missions"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:background="@android:color/transparent"
        android:text="@string/settings_icon" />

    <Button
        android:id="@+id/missions"
        style="@style/settings_missions"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:background="@android:color/transparent"
        android:text="@string/missions_icon" />


</RelativeLayout>