<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="smarthouse.smartronic2.MainActivity"
    android:background="@drawable/arkaplan">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_margin="20dp">

            <TextView
                android:text="@string/username"
                style="@style/LoginTextView"
                android:id="@+id/usernameView" />

            <EditText
                android:hint="@string/hint_email"
                style="@style/TextField"
                android:background="@drawable/rounded_edittext"
                android:id="@+id/UsernameEditText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_margin="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout4">


            <TextView
                android:text="@string/password"
                style="@style/LoginTextView"
                android:id="@+id/passwordView" />

            <EditText
                style="@style/TextField"
                android:background="@drawable/rounded_edittext"
                android:id="@+id/PasswordEditText" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/linearLayout3"
            android:layout_below="@+id/linearLayout4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                style="@style/LoginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/LoginButton"
                android:text="@string/login_button"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout5"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true">

            <TextView
                android:text="@string/forgot"
                style="@style/LoginForgot"
                android:id="@+id/forgot_text"
                android:gravity="center"
                android:textSize="15sp"
                android:onClick="ForgotPass"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
