<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="smarthouse.smartronic2.Security"
        android:background="@drawable/arkaplan">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:baselineAligned="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/rounded_layout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout6"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/flood_kitchen"
                    android:textColor="#eee"
                    android:gravity="center_vertical"
                    android:id="@+id/textView6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/status_ok"
                    android:gravity="center_vertical"
                    android:textColor="#eee"
                    android:id="@+id/status_kitchen_flood" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:baselineAligned="false"
            android:layout_marginTop="7dp"
            android:background="@drawable/rounded_layout"
            android:layout_below="@+id/linearLayout6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout7"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/flood_bathroom"
                    android:gravity="center_vertical"
                    android:id="@+id/textView7"
                    android:textColor="#eee" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/status_ok"
                    android:gravity="center_vertical"
                    android:textColor="#eee"
                    android:id="@+id/status_bathroom_flood" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:baselineAligned="false"
            android:layout_height="70dp"
            android:background="@drawable/rounded_layout"
            android:layout_below="@+id/linearLayout7"
            android:layout_marginTop="7dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout8"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/gas_leak_kitchen"
                    android:gravity="center_vertical"
                    android:textColor="#eee"
                    android:id="@+id/textView8" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/status_ok"
                    android:gravity="center_vertical"
                    android:textColor="#eee"
                    android:id="@+id/status_gas_kitchen" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginTop="7dp"
            android:id="@+id/linearLayout9"
            android:background="@drawable/rounded_layout"
            android:layout_below="@+id/linearLayout8"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/motion_sensor_hallway"
                    android:textColor="#eee"
                    android:gravity="center_vertical"
                    android:id="@+id/textView9" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textColor="#eee"
                    android:gravity="center_vertical"
                    android:text="@string/status_ok"
                    android:id="@+id/motion_sensor_hallway" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:baselineAligned="false"
            android:id="@+id/linearLayout10"
            android:layout_marginTop="7dp"
            android:layout_below="@+id/linearLayout9"
            android:background="@drawable/rounded_layout"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/motion_sensor_saloon"
                    android:textColor="#eee"
                    android:gravity="center_vertical"
                    android:id="@+id/textView10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textColor="#eee"
                    android:text="@string/status_ok"
                    android:gravity="center_vertical"
                    android:id="@+id/motion_sensor_saloon" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:baselineAligned="false"
            android:id="@+id/linearLayout11"
            android:background="@drawable/rounded_layout"
            android:layout_below="@+id/linearLayout10"
            android:layout_marginTop="7dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/magnetic_contact_main_entrance"
                    android:gravity="center_vertical"
                    android:textColor="#eee"
                    android:id="@+id/textView11" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/status_ok"
                    android:gravity="center_vertical"
                    android:textColor="#eee"
                    android:id="@+id/mc_main_entrance" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:baselineAligned="false"
            android:layout_height="70dp"
            android:id="@+id/linearLayout12"
            android:layout_marginTop="7dp"
            android:background="@drawable/rounded_layout"
            android:layout_below="@+id/linearLayout11"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/magnetic_contact_balcony"
                    android:textColor="#eee"
                    android:gravity="center_vertical"
                    android:id="@+id/textView12" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/status_ok"
                    android:textColor="#eee"
                    android:gravity="center_vertical"
                    android:id="@+id/mc_balcony" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
